== 2.0.1 / 2014-10-20

== 2.0 / 2012-08-11
* Change flag logic: --no-X will always be false, and --X will always be true,
  regardless of default.
* For flags that default to true, display --no-X instead of --X in the help
  menu. Accept both versions on the commandline.
* Fix a spurious warning
* Update Rakefile to 1.9
* Minor documentation fixes

== 1.16.2 / 2010-04-06
* Bugfix in Trollop::options. Thanks to Brian C. Thomas for pointing it out.

== 1.16.1 / 2010-04-05
* Bugfix in Trollop::die method introduced in last release.

== 1.16 / 2010-04-01
* Add Trollop::with_standard_exception_handling method for easing the use of Parser directly.
* Handle scientific notation in float arguments, thanks to Will Fitzgerald.
* Drop hoe dependency.

== 1.15 / 2009-09-30
* Don't raise an exception when out of short arguments (thanks to Rafael
  Sevilla for pointing out how dumb this behavior was).

== 1.14 / 2009-06-19
* Make :multi arguments default to [], not nil, when not set on the commandline.
* Minor commenting and error message improvements

== 1.13 / 2009-03-16
* Fix parsing of "--longarg=<value with spaces>".

== 1.12 / 2009-01-30
* Fix some unit test failures in the last release. Should be more careful.
* Make default short options only be assigned *after* all user-specified
  short options. Now there's a little less juggling to do when you just
  want to specify a few short options.

== 1.11 / 2009-01-29
* Set <opt>_given keys in the results hash for options that were specified
  on the commandline.

== 1.10.2 / 2008-10-23
* No longer try `stty size` for screen size detection. Just use curses, and
  screen users will have to deal with the screen clearing.

== 1.10.1 / 2008-10-22
* Options hash now responds to method calls as well as standard hash lookup.
* Default values for multi-occurrence parameters now autoboxed.
* The relationship between multi-value, multi-occurrence, and default values
  improved and explained.
* Documentation improvements.
