@@ -1,8 +1,7 @@
 # coding: utf-8
 lib = File.expand_path('../lib', __FILE__)
 $LOAD_PATH.unshift(lib) unless $LOAD_PATH.include?(lib)
-#require 'trollop/VERSION'
-require 'trollop'
+require 'trollop/version'
 
 Gem::Specification.new do |spec|
   spec.name          = "trollop"
@@ -15,11 +14,12 @@ gets out of your way. One line of code per option is all you need to write.
 For that, you get a nice automatically-generated help page, robust option
 parsing, command subcompletion, and sensible defaults for everything you don't
 specify."
-  spec.license       = "MIT"
   spec.homepage      = "http://manageiq.github.io/trollop/"
-  spec.files         = %w(lib/trollop.rb) + Dir["*.txt"]
-  spec.executables   = []
-  spec.test_files    = ["test/test_trollop.rb"]
+  spec.license       = "MIT"
+
+  spec.files         = `git ls-files -z`.split("\x0")
+  spec.executables   = spec.files.grep(%r{^bin/}) { |f| File.basename(f) }
+  spec.test_files    = spec.files.grep(%r{^(test|spec|features)/})
 
   spec.add_runtime_dependency 'curses'
   spec.require_paths = ["lib"]
@@ -27,4 +27,6 @@ specify."
   spec.add_development_dependency "minitest", "~> 4.7.3"
   spec.add_development_dependency "bundler", "~> 1.6"
   spec.add_development_dependency "rake", "~> 10.0"
+  spec.add_development_dependency "chronic"
+  spec.add_development_dependency "simplecov"
 end
