@@ -1,4 +1,5 @@
 == 2.0.1 / 2014-10-20
+* extract Gemfile / gemspec to follow bundler pattern
 
 == 2.0 / 2012-08-11
 * Change flag logic: --no-X will always be false, and --X will always be true,
